[package]
name = "feeder"
version = "0.1.0"
authors = ["Arran France <arran@arranfrance.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6"
actix = "0.7"
actix-web = { version="0.7", features=["alpn"] }
diesel = { version = "1.4.1", features = ["postgres"] }
futures = "0.1"
openssl-probe = "0.1.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "0.11"